app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

.container {
  background: rgba(255, 255, 255, 0.8);
  border-radius: 6px;
  padding-bottom: 10px;
}

body {
  background: image-url("mainbg.jpeg") no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

.navbar-default .navbar-brand {
  font-family: 'Marck Script', cursive;
  color: #000;
  font-weight: bolder;
  font-size: 1.75em;
}

ul {
  list-style: none;
}

.picfix {
  display: table-cell;
  max-height: 90px;
  max-width: 160px;

}

.equal, .equal > span[class*='col-'] {
    display: -webkit-flex;
    display: flex;
    flex:1 1 auto;
}

@media screen and (min-width: 480px) {
    li:nth-last-child{
    clear: both;
    }
 }

